--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,11 @@ ul {
   padding: 10px 20px;
 }
 
+.singleDeleteButton {
+  float:right;
+  margin-top:-3px;
+}
+
 .todo-list {
   flex: 1 1 0;
   margin-top: 20px;
